Fixed offline of invisible headline in logo to not be displayed even for very large queries

--- a/dev/scss/main/logos.scss
+++ b/dev/scss/main/logos.scss
@@ -12,7 +12,7 @@
       position: 50% 50%;
     }
     > span {
-      margin-left: -3000px;
+      margin-left: -30000px;
     }
   }
 }
